--- a/css/environment.css
+++ b/css/environment.css
@@ -149,7 +149,17 @@ header img {
   color: #333;
   font-size: 1.1rem;
 }
+footer {
+  background-color: #2c5f2d;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  margin-top: 40px;
+}
 
+footer p {
+  font-size: 16px;
+}
 @media (max-width: 768px) {
   .header-container {
     flex-direction: column;
