--- a/css/social.css
+++ b/css/social.css
@@ -21,7 +21,7 @@ body {
 }
 
 header {
-  background-color: #2c5f2d;
+  background-color: #2c3e50;
   padding: 20px;
   position: sticky;
   top: 0;
@@ -33,7 +33,7 @@ header {
   max-width: 1200px;
   margin: 0 auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
 }
 
@@ -95,9 +95,9 @@ header img {
 }
 
 .dropdown-content a:hover {
-  background-color: #2c5f2d;
+  background-color: #2C3E50;
   color: #fff;
-  border-left-color: #4caf50;
+  border-left-color: #7197bd;
   padding-left: 25px;
 }
 
@@ -150,7 +150,7 @@ header img {
   font-size: 1.1rem;
 }
 footer {
-  background-color: #2c5f2d;
+  background-color: #2c3e50;
   color: white;
   padding: 20px;
   text-align: center;
